<resources>

    <string name="app_name">AardvarkBouncer</string>
    <string name="menu_settings">Settings</string>
    <string name="logo_content_descr">Aardvark</string>
    <string name="title_activity_bouncer">Aardvark Bouncer</string>
    <string name="title_activity_login">Aardvark Login</string>

    <!-- Bouncer Scan Screen -->
    <string name="scan_btn">Scan Guest Code</string>
    <string name="test_request_btn">Send Test Request</string>
    <string name="scan_prompt_msg">Scan a Guest Code</string>
    <string name="invalid_guest_code_msg">Invalid guest code.\nPlease try scanning again.</string>
    <string name="checkin_accepted_msg">Check-in accepted!\nUser:</string>
    <string name="checkin_rejected_msg">Check-in rejected.</string>

    <!-- Login Screen -->
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="no_username_msg">Please enter a username.</string>
    <string name="no_password_msg">Please enter a password.</string>
    <string name="login_rejected_msg">Login rejected.\nPlease try re-entering your credentials.</string>

</resources>